@@ -1,3 +1,11 @@
+Wed Aug 31 15:16:23 2005  William Otte  <wotte@dre.vanderbilt.edu>
+	* DAnCE/Config_Handlers/RT-CCM/CB_Handler.cpp
+	* DAnCE/Config_Handlers/RT-CCM/PM_Handler.cpp
+	* DAnCE/Config_Handlers/RT-CCM/TPL_Handler.cpp
+	* DAnCE/Config_Handlers/RT-CCM/TP_Handler.cpp
+	
+	Fixes to satisfy a tempramental Borland compiler. 
+	
 Wed Aug 31 13:28:46 2005  William Otte  <wotte@dre.vanderbilt.edu>
 
 	* DAnCE/Config_Handlers/ADD_Handler.cpp
